--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -66,9 +66,13 @@
                     <a href="{% url 'worth' %}" class="text-white hover:text-green-200 transition duration-300 border-b-2 border-transparent hover:border-white">Worth</a>
                     {% endif %}
                     {% if request.user.is_authenticated %}
-                    <a href="{% url 'logout' %}" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 transition duration-300 shadow-md hover:shadow-lg rounded-lg text-xs">
-                        <i class="fa-solid fa-sign-out-alt mr-2"></i>Logout
-                    </a>
+                    <form method="POST" action="{% url 'logout' %}" >
+                        {%csrf_token%}
+                        <button type="submit" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 transition duration-300 shadow-md hover:shadow-lg rounded-lg text-xs">
+                            <i class="fa-solid fa-sign-out-alt mr-2"></i>Logout
+                        </button>
+
+                    </form>
                     {% endif %}
                 </div>
                 <button class="md:hidden text-white focus:outline-none" id="mobile-menu-button">
