--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -87,7 +87,7 @@
                 {% if request.user.is_authenticated %}
                 <form method="POST" action="{% url 'logout' %}" >
                     {% csrf_token %}
-                    <button type="submit" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 transition duration-300 shadow-md hover:shadow-lg rounded-lg text-xs">
+                    <button type="submit" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 transition duration-300 shadow-md hover:shadow-lg rounded-lg text-xs m-2">
                         <i class="fa-solid fa-sign-out-alt mr-2"></i>Logout
                     </button>
                 </form>
