--- a/store/templates/store/create_item.html
+++ b/store/templates/store/create_item.html
@@ -33,7 +33,7 @@
             </div>
             <div class="mt-8 flex justify-center">
                 <button type="submit" class="text-xs inline-flex items-center px-6 py-3 border border-transparent  font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500 uppercase transition duration-150 ease-in-out">
-                    Add Drug
+                    save
                 </button>
             </div>
         </form>
