--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -20,28 +20,31 @@
         <div class="overflow-x-auto max-h-[70vh]">
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-cyan-400">
-                    <tr class="text-xs">
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Supply Date</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & Supplier</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Total Drugs</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
+                    <tr class="text-xs text-center">
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supply Date</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Drug Name</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & Supplier</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Dosage Form</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Pack Size</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Drugs Added</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
+                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update Drug</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for i in po %}
-                    <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs">
+                    <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-center">
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: {{ i.added_by }}</small></td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}<br><small >{{ i.generic_name|default_if_none:'N/A' }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
@@ -49,7 +52,19 @@
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.expiration_date|date:'d-m-Y'|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm">
+                            {% if i.expiration_date %}
+                                <span class="{% if i.expires_soon %}text-red-500{% else %}text-gray-500{% endif %}">
+                                    {{ i.expiration_date|date:'d-M-Y' }}
+                                    {% if i.expires_soon %}
+                                        <br><small class="text-red-600 font-semibold"> (Expires soon!)</small>
+                                    {% endif %}
+                                </span>
+                            {% else %}
+                                <span class="text-gray-500">N/A</span>
+                            {% endif %}
+                        </td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-xl text-cyan-700"></i></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
