--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -21,24 +21,26 @@
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-amber-300">
                     <tr>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Date & Time Issued</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & <br> Supplier</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">System Date Issued</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Physical Date Issued</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & <br> Supplier</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Record</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for r in po %}
-                    <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-50 transition duration-150 ease-in-out">
+                    <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-50 transition duration-150 ease-in-out text-center">
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{r.date_issued}}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.issued_by|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ r.drug|default_if_none:'N/A' }}<br><small>{{ r.drug.generic_name|default_if_none:'N/A' }}</small></td>
@@ -46,8 +48,8 @@
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.unit_issued_to|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug.cost_price|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.quantity|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{%if r.balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ r.balance|default_if_none:'O/S' }}{%endif%}</td>
                         <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.remark|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500 text-center"><a href="{% url 'update_record' r.id %}"><i class="fa fa-solid fa-edit fa-xl text-amber-600"></i></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
