--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -32,7 +32,7 @@
                         <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
                         <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Drugs Added</th>
                         <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th>
+                        <!-- <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th> -->
                         <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
                         <th scope="col" class="px-3 py-3  text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update Drug</th>
                     </tr>
@@ -40,19 +40,19 @@
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for i in po %}
                     <tr class="{% cycle 'bg-white' 'bg-cyan-50' %} text-xs text-center">
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: {{ i.added_by }}</small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm">
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.supply_date|default_if_none:'N/A' }}<br> <small> added by: <br> {{ i.added_by }}</small></td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.generic_name|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
+                        <!-- <td class="p-3 whitespace-nowrap text-sm text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td> -->
+                        <td class="p-3 whitespace-nowrap text-sm">
                             {% if i.expiration_date %}
                                 <span class="{% if i.expires_soon %}text-red-500{% else %}text-gray-500{% endif %}">
                                     {{ i.expiration_date|date:'d-M-Y' }}
@@ -64,7 +64,7 @@
                                 <span class="text-gray-500">N/A</span>
                             {% endif %}
                         </td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-xl text-cyan-700"></i></a></td>
+                        <td class="p-3 whitespace-nowrap text-sm text-gray-500 text-center"><a href="{% url 'update_drug' i.id %}"><i class="fa fa-solid fa-edit fa-xl text-cyan-700"></i></a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
