--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -5,7 +5,7 @@
 {% block title %}Drugs Inventory{% endblock %}
 
 {% block content %}
-<h1 class="text-xl text-center font-bold text-gray-900 m-2">Drug Inventory Report Filters</h1>
+<h1 class="text-lg text-center font-bold text-gray-900 m-2">Drug Inventory Report Filters</h1>
 <div class="max-w-7xl mx-auto px-4">
     <div class="flex justify-end items-center m-2 space-x-2">
     {% if request.GET.urlencode %}
@@ -21,11 +21,11 @@
 </div>
     <!-- Filter Form -->
     <div class="bg-white shadow-md rounded-lg p-6 mb-8">
-        <form method="get" class="space-y-4">
+        <form method="get" class="space-y-1 text-xs">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4">
             {% for field in drugfilter.form %}
                <div>
-                   <label for="{{ field.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ field.label }}</label>
+                   <label for="{{ field.id_for_label }}" class="block text-xs font-medium text-gray-700">{{ field.label }}</label>
                    {% if field.field.widget.input_type == 'select' %}
                    <select name="{{ field.name }}" id="{{ field.id_for_label }}" 
                    class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
@@ -40,7 +40,7 @@
                               name="{{ field.name }}" 
                               id="{{ field.id_for_label }}" 
                               value="{{ field.value|default:'' }}"
-                              class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                              class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm text-xs border-gray-300 rounded-md"
                        >
                    {% endif %}
                    {% if field.errors %}
@@ -62,35 +62,35 @@
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-cyan-800">
                     <tr>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">S/N</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">SUpplyDate</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Drug info</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Brand & Supplier</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Dosage Form</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Pack Size</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Total Drugs</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Total Value</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Expiry Date</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">SUpplyDate</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-white uppercase tracking-wider">Drug info</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-white uppercase tracking-wider">Brand & Supplier</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Dosage Form</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Pack Size</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Total Drugs</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Balance</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Total Value</th>
+                        <th scope="col" class="px-6  text-left text-xs font-medium text-white uppercase tracking-wider">Expiry Date</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for i in po %}
-                    <tr class="{% cycle 'bg-white hover:bg-cyan-50' 'bg-cyan-50 hover:bg-cyan-100' %}">
-                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.updated_at|date:'d-m-Y'|default_if_none:'N/A' }}<br> <small> added by: {{ i.added_by }}</small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}<br><small >{{ i.generic_name|default_if_none:'N/A' }}</small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ i.expiration_date|date:'d-m-Y'|default_if_none:'N/A' }}</td>
+                    <tr class="{% cycle 'bg-white hover:bg-cyan-50' 'bg-cyan-50 hover:bg-cyan-100' %} text-xs text-center">
+                        <td class="px-6 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.updated_at|date:'d-m-Y'|default_if_none:'N/A' }}<br> <small> added by: {{ i.added_by }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.category|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ i.name|default_if_none:'N/A' }}<br><small >{{ i.generic_name|default_if_none:'N/A' }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.brand_name|default_if_none:'N/A' }}<br> <small>{{ i.supplier|default_if_none:'N/A' }} </small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.dosage_form|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.pack_size|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.total_purchased_quantity|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{%if i.current_balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.total_value|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.expiration_date|date:'d-m-Y'|default_if_none:'N/A' }}</td>
                     </tr>
                     {% empty %}
                     <tr>
