--- a/store/templates/store/record_report.html
+++ b/store/templates/store/record_report.html
@@ -3,7 +3,7 @@
 {% block title %}ISSUANCE RECORD REPORT{% endblock %}
 
 {% block content %}
-<h1 class="text-xl font-bold text-gray-900 text-center">Issuance Record Report Filters</h1>
+<h1 class="text-lg font-bold text-gray-900 text-center">Issuance Record Report Filters</h1>
 <div class="max-w-7xl mx-auto px-4 ">
     <div class="flex justify-end items-center m-2 space-x-2">
         {% if request.GET.urlencode %}
@@ -22,7 +22,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-8 gap-4">
                 {% for field in recordfilter.form %}
                    <div>
-                       <label for="{{ field.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ field.label }}</label>
+                       <label for="{{ field.id_for_label }}" class="block text-xs font-medium text-gray-700">{{ field.label }}</label>
                        {% if field.field.widget.input_type == 'select' %}
                        <select name="{{ field.name }}" id="{{ field.id_for_label }}" 
                        class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
@@ -37,7 +37,7 @@
                                   name="{{ field.name }}" 
                                   id="{{ field.id_for_label }}" 
                                   value="{{ field.value|default:'' }}"
-                                  class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
+                                  class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm text-xs border-gray-300 rounded-md"
                            >
                        {% endif %}
                        {% if field.errors %}
@@ -66,33 +66,33 @@
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-amber-500">
                     <tr class="text-xs">
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Date & Time Issued</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & <br> Supplier</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
-                        <th scope="col" class="px-3 py-3 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Date & Time Issued</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Drug info</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Brand & <br> Supplier</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Unit Issued To</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
+                        <th scope="col" class="px-3  text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for r in recordfilter.qs %}
-                    <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-100 transition duration-150 ease-in-out text-xs">
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.issued_by|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug|default_if_none:'N/A' }}<br><small>{{ r.drug.generic_name|default_if_none:'N/A' }}</small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug.brand_name|default_if_none:'N/A' }} <br><small>{{ r.drug.supplier|default_if_none:'N/A' }}</small></td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.unit_issued_to|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.drug.cost_price|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.quantity|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{%if r.balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ r.balance|default_if_none:'O/S' }}{%endif%}</td>
-                        <td class="px-3 py-4 whitespace-nowrap text-sm text-gray-500">{{ r.remark|default_if_none:'N/A' }}</td>
+                    <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-100 transition duration-150 ease-in-out text-xs text-center">
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.issued_by|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug|default_if_none:'N/A' }}<br><small>{{ r.drug.generic_name|default_if_none:'N/A' }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.brand_name|default_if_none:'N/A' }} <br><small>{{ r.drug.supplier|default_if_none:'N/A' }}</small></td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.unit_issued_to|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.cost_price|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.quantity|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{%if r.balance <= 0 %} <span class="text-rose-700 font-semibold">O/S</span>{%else%}{{ r.balance|default_if_none:'O/S' }}{%endif%}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.remark|default_if_none:'N/A' }}</td>
                     </tr>
                     {% empty %}
                     <tr>
