success message for drug update done

--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -3,7 +3,6 @@
 {% load static %}
 
 {% block title %}Drugs Inventory{% endblock %}
-
 {% block content %}
 <div class="mx-1">
     <h1 class="text-lg font-bold text-gray-900 text-center">Drug Inventory</h1>
@@ -70,7 +69,7 @@
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Balance</th>
                         <!-- <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Total Value</th> -->
                         <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Expiry Date</th>
-                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update Drug</th>
+                        <th scope="col" class="px-3   text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
