--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -32,7 +32,7 @@
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Cost Price</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
                         <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Remark</th>
-                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Record</th>
+                        <th scope="col" class="px-3 py-3 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
