--- a/store/templates/store/restocked_list.html
+++ b/store/templates/store/restocked_list.html
@@ -29,7 +29,7 @@
                         <th scope="col" class="px-3 py-2 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Brand</th>
                         <th scope="col" class="px-3 py-2 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
                         <th scope="col" class="px-3 py-2 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
-                        <th scope="col" class="px-3 py-2 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update Restock</th>
+                        <th scope="col" class="px-3 py-2 text-center text-xs font-medium text-gray-900 uppercase tracking-wider">Update</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
