--- a/store/templates/store/item_pdf.html
+++ b/store/templates/store/item_pdf.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOHD PHARMACY REPORT</title>
     <style>
-
+@page{
+    margin: 0.8cm;
+    border: 1px solid green;
+    padding: 0.1cm;
+}
 /* Table styles */
 table {
     width: auto;
     margin-top: 0px; /* Adjust the top margin as needed */
-    border-collapse: collapse;
 }
 
 
-th, td {
-    border: 0.5px solid #060501; /* Adjust the color as needed */
-    padding: 6px; /* Adjust the padding as needed */
+ td {
+    border: 0.1px solid #ddd; /* Adjust the color as needed */
+    padding: 5px; /* Adjust the padding as needed */
     word-wrap: break-word; /* Allow text to wrap */
     overflow: hidden; /* Add this line to prevent overflow */
     text-overflow: ellipsis; /* Add this line to display ellipsis (...) for truncated text */
@@ -26,8 +29,9 @@ th, td {
 
 /* Table header cell styles */
 th {
-    background: #024a57; 
+    background-color: #057f1e;
     color: #fff; 
+    padding: 2px;
 }
 .table-auto {
     width: auto;
@@ -51,9 +55,6 @@ th {
     background-color: #fff;
 }
 
-.border-2 {
-    border: 1px solid #010603; /* Adjust the color as needed */
-}
 
 .max-sm\:p-2,
 .p-2 {
@@ -68,15 +69,6 @@ th {
     font-size: 1rem;
 }
 
-.border-b-2 {
-    border-bottom: 1px solid #fff; /* Adjust the color as needed */
-    color: #000; /* Text color for header */
-}
-
-.border-t-2 {
-    border-top: 1px solid #fff; /* Adjust the color as needed */
-    color: #000; /* Text color for header */
-}
 
 .p-3 {
     padding: 0.2rem;
@@ -119,72 +111,106 @@ th {
             margin: 0 auto;
         }
         .queryset-data {
-            margin-top: 10px;
+            margin-top: 2px;
             text-align: center;
+            color: #039a10;
+            text-align: center;
+
         }
         .rose{
          color: red;   
         }
+        .sn{
+            width: 4%;
+        }.cp{
+            width: 10%;
+        }
+        .dn{
+            width: 20%
+        }
+        .summary {
+            background-color: #e6f3ff;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .logo-container {
+        text-align: center;
+        margin-bottom: 2px;
+        margin-top: 0%;
+    }
+body{
+    font-family: Arial, sans-serif;
+        color: #333;
+        margin: 0;
+        box-sizing: border-box;
+        min-height: 100vh;
+}
     </style>
 </head>
 <body>
+    <div class="logo-container">
     <img class="center logo-image" src="{% static "images/logo.jpg" %}" alt="">
+    </div>
     <h1 class="queryset-data"><b>NOHD PHARMACY INVENTORY REPORT</b></h1>
     <div class="result">
-        <br>{{ result|upper }}
+        <b>{{ result|upper }}</b>
     </div>
     <hr>
      <!-- Display queryset data -->
-     <div class="queryset-data">
-        <b>FOR:</b><br>{% for key in keys %}{{ key }}{% if not forloop.last %}, {% endif %}{% endfor %}
-        <hr>  
+     <div class="summary">
+        <b>REPORT FOR DRUG FILTERED BY:</b>&nbsp;{% for key in keys %}{{ key|upper }}{% if not forloop.last %},&nbsp; {% endif %}{% endfor %}
     </div>
 
   <table class="table-auto max-sm:flex items-center justify-center">
         <tbody class="bg-white border-2 max-sm:p-2 p-2 overflow-x-auto border-cyan-900 text-xs">
             <tr class="bg-gradient-to-r from-cyan-700 via-cyan-500 to-cyan-700 text-white">
-                <th>S/N</th>
+                <th class="sn">#</th>
                 <th>DATE ADDED / UPDATED</th>
-                <th scope="col" class=" p-3">NAME / DOSAGE FORM</th>
-                <th scope="col" class=" p-3">BRAND NAME / SUPPLIER</th>
-                <th scope="col" class=" p-3">PACK SIZE</th>
-                <th scope="col" class=" p-3">COST PRICE</th>
-                <th scope="col" class=" p-3">BALANCE</th>
+                <th scope="col" class="dn p-3">NAME / DOSAGE FORM</th>
+                <th scope="col" class="dn p-3">BRAND NAME / SUPPLIER</th>
+                <th scope="col" class="cp p-3">PACK SIZE</th>
+                <th scope="col" class="cp p-3">COST PRICE</th>
+                <th scope="col" class="cp p-3">BALANCE</th>
                 <th scope="col" class=" p-3">EXPIRY DATE</th>
                 <th scope="col" class=" p-3">ADDED BY</th>
                 </tr>
               {% for i in f %}        
         <tr class="{% cycle 'bg-white hover:bg-cyan-200' 'bg-cyan-100 hover:bg-cyan-200' %} text-gray-600">
-                <td class="border-1 border-stone-700 p-3 text-center">
+                <td class="border-1 border-stone-700 p-3 text-center sn">
                 {{forloop.counter}}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center">
                 {{i.updated_at|default_if_none:''}}
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">
+                <td class="border-1 border-stone-700 p-3 text-center dn">
                 {{i.name|default_if_none:''|upper}}<br>
-                {{i.dosage_form|default_if_none:''|upper}}
+                <small>
+                    {{i.dosage_form|default_if_none:''|upper}} 
+                </small>
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">
+                <td class="border-1 border-stone-700 p-3 text-center dn">
                 {{i.brand_name|default_if_none:''|upper}}<br>
-                {{i.supplier|default_if_none:''|upper}} 
+                <small>
+                    {{i.supplier|default_if_none:''|upper}} 
+                </small>
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">
+                <td class="border-1 border-stone-700 p-3 text-center cp">
                 {{i.pack_size|default_if_none:''|upper}}
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">
+                <td class="border-1 border-stone-700 p-3 text-center cp">
                 {{i.cost_price|default_if_none:''|upper}}
                 </td>
-                <td class="border-1 border-stone-700 p-3 text-center">                    
+                <td class="border-1 border-stone-700 p-3 text-center cp">                    
                 {%if i.current_balance <= 0 %} 
                 <span class="rose">O/S</span>
                 {%else%}{{ i.current_balance|default_if_none:'O/S' }}{%endif%}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center">
-                {{i.expiration_date|default_if_none:''|upper}}
+                {{i.expiration_date|date:'M-Y'|default_if_none:'N/A'}}
                 </td>
                 <td class="border-1 border-stone-700 p-3 text-center">
-                {{i.added_by}}
+                {{i.added_by|upper}}
                 </td>
           </tr>
           {%endfor%}
